--- a/public/css/main.css
+++ b/public/css/main.css
@@ -411,7 +411,7 @@ LOGIN
         .despcripcion-form{width: 90%; margin: 0 auto; padding: 0; float: none; overflow: hidden; padding-bottom: 10px;}
         .area-form{width: 93%; padding: 3%; margin: 0;}
         .btn-enviar{width: 100%; float: none; margin: 0 auto; overflow: hidden; padding-top: 10px; background-repeat: no-repeat; background-position: center center; }
-        .copyright{width: 90%;}
+        .copyright{width: 90%; margin: 10px auto;}
         .bases{padding: 0;}
     }
     /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
