--- a/public/css/main.css
+++ b/public/css/main.css
@@ -258,7 +258,7 @@ LOGIN
 
 /* DETALLE CITY */
 .detalle_city{background: url(../img/bg_detalle_city.png) no-repeat 0 0; overflow: hidden; width: 910px; background-size:100% 100%;display: block;margin: 0 auto;padding: 40px 0 20px 40px;}
-.detalle_city h2.slide{font-family: 'boogalooregular';font-size: 1em;color: #d70303;text-shadow: none;text-align: left; clear:both;}
+.detalle_city h2.slide{font-family: 'boogalooregular';font-size: 1em;color: #d70303;text-shadow: none;text-align: left; clear:both; margin-bottom:0}
 .detalle_city .images ul{width: auto;margin: 0 auto;overflow: hidden;text-align: center;list-style: none;padding: 0;}
 .detalle_city .images ul li{ float: left;width: 180px;height: 109px;margin: 0 15px 10px 0; padding: 0;}
 .detalle_city #map{ width:850px;height:262px;margin:0 auto; padding: 0; float:left;}
@@ -274,6 +274,7 @@ LOGIN
 .detalle_city .detail{width:45%; float: left; text-align: left;}
 .detalle_city .rating-count{text-align: left;}
 .detalle_city .recomendacion{padding-top: 10px;  margin-bottom: 0;}
+.detalle_city .address{text-align: left; margin-top:0; margin-bottom: 10px; display:block}
 #view .intro-box{padding:20px 0;}
 
 #view .comments{max-width: 90%; width: 910px; margin: 0 auto; background: #eee}
