--- a/public/css/main.css
+++ b/public/css/main.css
@@ -298,7 +298,7 @@ LOGIN
 /* BUSCANDO A JENNY */
 .jenny { margin:1em auto; position:relative;}
 .jenny .intro{font-size: 1.4em;}
-.jenny .title_jenny{font-family: 'boogalooregular';font-size: 1em;color: #d70303;text-shadow: none;text-align: left; clear:both; width:670px; margin:1em auto;}
+.jenny .title_jenny{font-family: 'boogalooregular',sans-serif;font-size: 1em;color: #d70303;text-shadow: none;text-align: left; clear:both; width:670px; margin:1em auto;}
 .jenny .video{background: #000; width:690px;height:436px;display: block;margin: 0 auto; padding:0;}
 .jenny .video iframe{ width:674px;height:430px;display: block;margin: 5px auto;padding:0; border:none;}
 .jenny .shared {  width:674px; height:46px; display:block; margin: 1em auto;}
@@ -310,12 +310,12 @@ LOGIN
 .jenny .miniaturas .thumbs .img{width: 260px; margin:0 0 0 0px; background-color: #ccc;text-align: center; height: 120px; overflow: hidden; background-size: 100%; background-position: center center;}
 .jenny .miniaturas .thumbs img{  margin:0; padding:0; width: 100px; line-height: 100px; padding-top: 30px; }
 .jenny .miniaturas .thumbs .vervideo{ float:right; background:url(../img/btn_vervideo.png) no-repeat 0 0; width:129px; height:39px; display:block; margin: 10px 20px 0 0; padding:0;}
-.jenny .miniaturas .thumbs h2{font-family: 'boogalooregular';font-size: 0.7em; color: #d70303;text-shadow: none;text-align: left; margin:1em auto;}
+.jenny .miniaturas .thumbs h2{font-family: 'boogalooregular',sans-serif;font-size: 0.7em; color: #d70303;text-shadow: none;text-align: left; margin:1em auto;}
 
 
 /* PASSWORD */
 .password.form{width: 300px; max-width: 80%; margin: 0 auto;}
-.password form input{display: block; clear: both; width: 94%; margin: 5% 0; outline:none; padding: 3%; font-family: 'boogalooregular'; border-radius:5px; border:solid 1px #ccc; font-size: 15px;}
+.password form input{display: block; clear: both; width: 94%; margin: 5% 0; outline:none; padding: 3%; font-family: 'boogalooregular',sans-serif; border-radius:5px; border:solid 1px #ccc; font-size: 15px;}
 
 
 /* #Media Queries
@@ -362,7 +362,7 @@ LOGIN
 
         #container{margin-top: 0;}
 
-        footer{text-align: center; position: fixed; width: 100%; bottom:0; left: 0; z-index: 2; position: relative;}
+        footer{text-align: center; width: 100%; bottom:0; left: 0; z-index: 2; position: relative;}
         footer #footer_content{width: 100%;}
         footer .contenido-footer{width:100%;float: none; overflow: hidden; height: auto; margin: 0 auto; }
         footer .copyright{float:none; display: block}
@@ -428,7 +428,7 @@ LOGIN
 		.search-box .submit {background: url("../img/bg-btn-search.png");color: #fff;border: none;margin: auto;width: 135px;height: 46px;overflow: hidden;float: none;}
        	.search-box .box {border: solid 3px #444843;width: 80%;padding: 5px 10px;height: 30px;font-size: 30px;background: none;margin: 0 5% 10% 5%;float: none;}
 		
-		h2.city-title {font-family: 'cheap_pine_sanssans';height: 147px;width: 80%;text-transform: uppercase;line-height: 2em;font-size: 3em;background: url('../img/bg-city-title.png') top center no-repeat;margin: 0 auto;display: block;}
+		h2.city-title {font-family: 'cheap_pine_sanssans',sans-serif;height: 147px;width: 80%;text-transform: uppercase;line-height: 2em;font-size: 3em;background: url('../img/bg-city-title.png') top center no-repeat;margin: 0 auto;display: block;}
 		.categories {background: #000;height: auto; width: 80%; margin:0 auto;}
 		.categories ul {width: 100%;margin: 0 auto;overflow: hidden;text-align: center;list-style: none;padding: 0;}
 		.categories li {display: block; border-bottom:solid #333 1px;}
