Placeholder donde no lo habia

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -56,6 +56,9 @@ textarea {
     padding: 0.2em 0;
 }
 
+.placeholder{
+    color:#999;
+}
 
 /* ==========================================================================
    GDZ - STYLES
