--- a/public/css/main.css
+++ b/public/css/main.css
@@ -213,8 +213,9 @@ LOGIN
 .datos{overflow:hidden;}
 .dato-small{width:265px; height: 394px; padding: 0 25px; margin:10px 0px; background: url("../img/bg-dato.png") no-repeat center center; float: left; text-align: left; }
 .dato-small .nombre{font-family: 'cheap_pine_sanssans'; color: #d70303; font-size: 20px; display: block; margin-top: 50px;}
-.dato-small .img{width: 260px; height: 120px; background: #ccc; overflow: hidden; }
+.dato-small .img{width: 260px; height: 120px; background: #ccc; overflow: hidden; position: relative; }
 .dato-small .img img{width: 100%; }
+.dato-small .img .distance{position:absolute; top: 0; right: 0; background: rgba(0,0,0,0.4); padding: 2px 8px; font-weight: normal; color: #fff; font-size: 18px; border-bottom-left-radius: 5px;}
 .dato-small .meta{margin:5px 0 0 0; padding: 2px; overflow: hidden;}
 .dato-small .meta span{display:block; float: left; border-left: solid 1px #ccc; line-height: 10px; font-size: 10px; font-family: 'Helvetica','Arial',sans-serif; color: #7a7a7a; padding: 0 10px; }
 .dato-small .meta span.author{border:none; padding-left: 0; width:100px;}
