--- a/public/css/main.css
+++ b/public/css/main.css
@@ -190,6 +190,8 @@ LOGIN
 #login .btn-red{border:none; width: 136px; margin: 5px auto; padding: 0;  }
 #login .already_registered{display: block; text-align: center; padding-bottom: 10px;}
 
+#login-page{width: 280px; margin: 100px auto;}
+
 #thanks h3{margin: 0;}
 #thanks .btn-red{margin:0 auto; display: block;}
 
