Mensaje de navegador obsoleto

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,10 +50,11 @@ textarea {
 }
 
 .browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
+    margin: 50px 0 20px 0;
+    background: lightyellow;
     color: #000;
     padding: 0.2em 0;
+    text-align: center;
 }
 
 .placeholder{
