--- a/public/css/main.css
+++ b/public/css/main.css
@@ -153,13 +153,13 @@ header.desktop .submenu .shares .twitter-share-button{padding-top: 5px; float: l
 .nav a:hover{opacity:0.8;}
 
 /* PAGINTATION */
-.pagination,
-.pagination li{list-style: none; padding:0; margin: 0;}
-.pagination{text-align: center; padding: 30px 0;}
-.pagination li{display: inline-block; line-height: 25px;}
-.pagination li a,
-.pagination li span{display: inline-block;width: 25px; height: 25px; padding:5px; border:solid 1px #ccc;border-radius:5px; margin: 5px; background: #666  }
-.pagination li a{background: #ccc; text-decoration: none; color: #000; }
+.pager,
+.pager li{list-style: none; padding:0; margin: 0;}
+.pager{text-align: center; padding: 30px 0;}
+.pager li{display: inline-block; line-height: 25px;}
+.pager li a,
+.pager li span{display: inline-block;width: 25px; height: 25px; padding:5px; border:solid 1px #ccc;border-radius:5px; margin: 5px; background: #666  }
+.pager li a{background: #ccc; text-decoration: none; color: #000; }
 
 /*************************************
 POPUP 
