--- a/public/css/diego.css
+++ b/public/css/diego.css
@@ -97,12 +97,17 @@
 .precisar p{margin:0; margin-top: 20px; padding-left: 10px; color: #333;}
 .dato-in{
 	width:271px;
-	height:82px;
 	float:left;
 	text-align:left;
 	font-size:18px;
 	display: block;
 	margin:10px 0px 0px 10px;
+}
+.dato-in small{font-style: italic; display: block;}
+.dato-in .error{
+	color: red;
+	font-size: 15px;
+	display: none;
 }
 .dato-in.large{width: 500px; margin-bottom: 10px;}
 .dato-in.large input{width: 520px;}
