--- a/public/css/main.css
+++ b/public/css/main.css
@@ -233,6 +233,7 @@ LOGIN
 .dato-small .rating{float:left; margin-top: 12px;}
 
 /* SUBE TU DATO */
+.available_pictures{display: block; clear: both; overflow: hidden;}
 .available_pictures img{width: 42%; margin: 2%; border: solid 5px #ccc; cursor: pointer;}
 .available_pictures img.selected{border-color: red;}
 
@@ -299,7 +300,7 @@ LOGIN
 #my_route .intro-box{max-width:90%; width: 500px; margin: 0 auto; display: block; }
 
 /* SUBMIT TIP */
-#submit-tip #map-container{width:104%; background: #ccc; clear: both; float: left; margin-left: -4%; }
+#submit-tip #map-container{width:110%; background: #ccc; clear: both; float: left; margin-left: -4.5%; }
 #submit-tip #map{width: 100%; height: 190px;}
 #submit-tip .thanks{width: 90%; margin: 0 auto;}
 #submit-tip .thanks h1{font-size: 1.6em;}
