--- a/public/css/diego.css
+++ b/public/css/diego.css
@@ -111,8 +111,8 @@
 	display: none;
 	text-transform: uppercase;
 }
-.dato-in.large{width: 500px; margin-bottom: 10px;}
-.dato-in.large input{width: 520px;}
+.dato-in.large{width: 500px; margin-bottom: 10px; max-width: 90%;}
+.dato-in.large input{width: 520px; max-width: 90%;}
 .dato-in label{text-transform: uppercase;}
 .dato-in input,.dato-in select,.dato-in textarea{
 	font-family: 'boogalooregular','Arial',sans-serif;
