--- a/public/css/everything.css
+++ b/public/css/everything.css
@@ -1666,7 +1666,7 @@ header.desktop .submenu .shares .twitter-share-button {
         float:none
     }
     #container {
-        margin-top:0
+        margin-top:17%;
     }
     footer {
         text-align:center;
