--- a/public/css/cronstudio.css
+++ b/public/css/cronstudio.css
@@ -1,4 +1,4 @@
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
-img#avatar{
-	display: none !important; 
+#avatar{
+	display: none !important;  
 }
