--- a/public/css/main.css
+++ b/public/css/main.css
@@ -344,8 +344,8 @@ LOGIN
     /* All Mobile Sizes (devices and browser) */
     @media only screen and (max-width: 767px) {
         /********* HEADER ***********/
-        html,body{width: 100%;}
-        #content{background:url("../img/bg.jpg") top center ;}
+        html,body{width: 100%;} 
+        #content{background:url("../img/bg.jpg") top center ; margin-top: 17% }
         header.mobile{width: 100%; height: 65px; background:#000 url("../img/logo-mobile.png") no-repeat center center; overflow: hidden; position: relative; z-index: 1 }
         /*header ul{display: none; width: 100%;background:#022562;opacity:0.99;position: fixed; top: 65px; left: 0; }
         header ul li{display: block;float: none; text-align: center; border:none; background:none; padding:0; border-bottom: solid 1px #666; margin: 0 5% ;}
