--- a/public/css/cronstudio.css
+++ b/public/css/cronstudio.css
@@ -1,23 +1,28 @@
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 
-#avatar{
-	float: right;
-    margin-right: 4%;
-    margin-top: 2%;
-	border-radius: 7px 7px 7px 7px;
-	-moz-border-radius: 7px 7px 7px 7px;
-	-webkit-border-radius: 7px 7px 7px 7px;
-	border: 0px solid #000000;
-}
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {
 
-.links .registrate{
-	background-color: #6FB7C0; 
-	width: 90%; 
-	margin-left: 5%;
-}
-.links .inicia-sesion{
-	background-color: #4F4F4F; 
-	width: 90%; 
-	margin-left: 5%;
-	margin-top: 2%;
+	#avatar{
+		float: right;
+	    margin-right: 4%;
+	    margin-top: 2%;
+		border-radius: 7px 7px 7px 7px;
+		-moz-border-radius: 7px 7px 7px 7px;
+		-webkit-border-radius: 7px 7px 7px 7px;
+		border: 0px solid #000000;
+	}
+
+	.links .registrate{
+		background-color: #6FB7C0; 
+		width: 90%; 
+		margin-left: 5%;
+	}
+	.links .inicia-sesion{
+		background-color: #4F4F4F; 
+		width: 90%; 
+		margin-left: 5%;
+		margin-top: 2%;
+	}
+
 }
