--- a/public/css/cronstudio.css
+++ b/public/css/cronstudio.css
@@ -4,6 +4,11 @@ li.active:nth-child(3){
 	display: none;
 }
 
+.links .registrate{
+    float: left;
+    margin-left: 32%;
+}
+
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
 
