--- a/public/css/cronstudio.css
+++ b/public/css/cronstudio.css
@@ -4,6 +4,10 @@ li.active:nth-child(3){
 	display: none;
 }
 
+li.active:nth-child(2){
+	display: block;
+}
+
 .links .registrate{
     float: left;
     margin-left: 32%;
@@ -14,6 +18,10 @@ li.active:nth-child(3){
 
 	li.active:nth-child(2){
 		display: none;
+	}
+
+	li.active:nth-child(3){
+		display: block;
 	}
 
 	#avatar{
