--- a/public/css/cronstudio.css
+++ b/public/css/cronstudio.css
@@ -35,11 +35,13 @@ li.active:nth-child(2){
 	}
 
 	.links a.registrate{
+		display: block;
 		background-color: #6FB7C0; 
 		width: 90%; 
 		margin-left: 5%;
 	}
 	.links a.inicia-sesion{
+		display: block;
 		background-color: #4F4F4F; 
 		width: 90%; 
 		margin-left: 5%;
