--- a/public/css/cronstudio.css
+++ b/public/css/cronstudio.css
@@ -35,13 +35,13 @@ li.active:nth-child(2){
 	}
 
 	.links a.registrate{
-		display: block;
+		display: block !important;
 		background-color: #6FB7C0 !important; 
 		width: 83%; 
 		margin-left: 5%;
 	}
 	.links a.inicia-sesion{
-		display: block;
+		display: block !important;
 		background-color: #4F4F4F !important; 
 		width: 83%; 
 		margin-left: 5%;
