--- a/public/css/main.css
+++ b/public/css/main.css
@@ -274,7 +274,7 @@ LOGIN
 .detalle_city{background: url(../img/bg_detalle_city.png) no-repeat 0 0; overflow: hidden; width: 910px; background-size:100% 100%;display: block;margin: 0 auto;padding: 40px 0 20px 40px;}
 .detalle_city h2.slide{font-family: 'boogalooregular';font-size: 1em;color: #d70303;text-shadow: none;text-align: left; clear:both; margin-bottom:0}
 .detalle_city .images ul{width: auto;margin: 0 auto;overflow: hidden;text-align: center;list-style: none;padding: 0;}
-.detalle_city .images ul li{ float: left;width: 180px;height: 109px;margin: 0 15px 10px 0; padding: 0;}
+.detalle_city .images ul li{ float: left;width: 100%;height: 109px;margin: 0 15px 10px 0; padding: 0;}
 .detalle_city #map{ width:850px;height:262px;margin:0 auto; padding: 0; float:left;}
 .detalle_city .shared{ width:590px; height:60px; float:right;}
 .detalle_city .shared a:hover{opacity: 0.7;}
@@ -284,7 +284,7 @@ LOGIN
 .detalle_city .shared .tw{  background: url(../img/btn_twitter.png) no-repeat 0 0; width:185px; height:46px; display:block; float:left; cursor:pointer;}
 .detalle_city .imgs li{width: 150px; display: inline-block; overflow: hidden; border-radius:10px;}
 .detalle_city .imgs li img{width: 100%; border-radius:10px;}
-.detalle_city .images{width:50%; float: left;}
+.detalle_city .images{width:100%; float: left;}
 .detalle_city .detail{width:45%; float: left; text-align: left;}
 .detalle_city .rating-count{text-align: left;}
 .detalle_city .recomendacion{padding-top: 10px;  margin-bottom: 0;}
@@ -405,7 +405,8 @@ LOGIN
 
         /************* DETALLE TIP ********************/
         .detalle_city {background-size: 100% 100%; width: 90%;height: auto;display: block;margin: 0 auto;padding:55px 0 30px 5%;}
-        .detalle_city .imgs li img {width:100%;float: left;border-radius: 10px;}
+        /*.detalle_city .imgs li img {width:100%;float: left;border-radius: 10px;}*/
+        .detalle_city .imgs li img {width: 320px; float: left; border-radius: 10px; height: 200px;}
         .principal{display: none;}
         .detalle_city h2.slide {font-family: 'boogalooregular';font-size: 1.8em;color: #d70303;text-shadow:none;text-align: left;clear: both; margin: 0}
         .detalle_city h2.recomendacion {font-size: 1.1em;color: #d70303;text-shadow:none;text-align: left;clear: both; line-height: 1.1em;margin: 5% 0;}
