--- a/public/css/main.css
+++ b/public/css/main.css
@@ -431,6 +431,7 @@ LOGIN
         .btn-enviar{width: 100%; float: none; margin: 0 auto; overflow: hidden; padding-top: 10px; background-repeat: no-repeat; background-position: center center; }
         .copyright{width: 90%; margin: 10px auto;}
         .bases{padding: 0;}
+        .logo{padding-top: 3%;}
     }
     /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
     @media only screen and (min-width: 480px) and (max-width: 767px) {
