--- a/public/css/cronstudio.css
+++ b/public/css/cronstudio.css
@@ -77,5 +77,7 @@ li.active:nth-child(2){
 }
 
 @media only screen and (max-width: 375px) {
-	
+
+	.avatar{ width: 50px; float: right; margin-right: 3%; margin-top: 2%; }
+
 }
