--- a/public/css/cronstudio.css
+++ b/public/css/cronstudio.css
@@ -78,6 +78,15 @@ li.active:nth-child(2){
 
 @media only screen and (max-width: 375px) {
 
-	.avatar{ width: 50px; float: right; margin-right: 3%; margin-top: 2%;}
+	.avatar{ 
+		width: 50px; 
+		float: right; 
+		margin-right: 3%; 
+		margin-top: 2%;
+		border-radius: 7px 7px 7px 7px;
+		-moz-border-radius: 7px 7px 7px 7px;
+		-webkit-border-radius: 7px 7px 7px 7px;
+		border: 0px solid #000000;
+	}
 
 }
